--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,4 +1,14 @@
-#wrap {
-  max-width: 1024px;
-  margin: 0 auto;
+h2 {
+  font-weight: bold !important;
+}
+
+.navbar {
+  padding-top: 15px;
+  padding-left: 15px;
+}
+.site-title {
+  color: #007bff;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  font-size: 1.1em;
 }
