--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,28 +1,38 @@
-<h2>Sign up</h2>
-
+<h2>ユーザー登録</h2>
+<% flash.each do |message_type, message| %>
+  <div>
+    <% if (message_type=="alert") %>
+      <%= content_tag(:div, message, class: "alert alert-danger") %>
+    <% elsif (message_type=="notice") %>
+      <%= content_tag(:div, message, class: "alert alert-success") %>
+    <% else %>
+      <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+    <% end %>
+  </div>
+<% end %>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email, "Eメール" %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
-
+  <br>
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :password, "パスワード" %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em>（<%= @minimum_password_length %> 文字以上で入力してください）</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
+  <br>
+  <div class="field mb_20">
+    <%= f.label :password_confirmation, "パスワード（確認用）" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="actions mb_15">
+    <%= f.submit "登録", class: "btn btn-primary" %>
   </div>
 <% end %>
 
