[add] ナビゲーションバーのリンクに「プロフィール」「ログアウト」を追加

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,10 +5,19 @@ h2 {
 .navbar {
   padding-top: 15px;
   padding-left: 15px;
-}
-.site-title {
-  color: #007bff;
-  text-decoration: none;
-  padding: 0.5rem 1rem;
-  font-size: 1.1em;
+  .site-title {
+    color: #007bff;
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    font-size: 1.1em;
+  }
+  .nav-title {
+    color: rgba(0,0,0,0.5);
+        padding-right: .5rem;
+    padding-left: .5rem;
+    &:hover {
+      text-decoration: none;
+      color: #212529;
+    }
+  }
 }
