--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,10 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light bg-faded">
         <%= link_to 'e-Navigator', root_path, class: "site-title" %>
+        <% if user_signed_in? %>
+          <%= link_to 'プロフィール', edit_user_registration_path(current_user), class: "nav-title" %>
+          <%= link_to 'ログアウト', destroy_user_session_path, method: "delete", class: "nav-title" %>
+        <% end %>
       </nav>
       <%= yield %>
     </div>
